hphp/test/slow/readonly/prop_cow.hhas.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Read-Only collections cannot be mutated.' in %s/prop_cow.hhas:19
%A
